--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,20 @@
+/* .fa-info:hover {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .fa-info:hover .tooltip {
+    visibility: visible;
+    opacity: 1;
+    background-color: #fff;
+    color: #000;
+    text-align: center;
+    padding: 5px 10px;
+    border-radius: 3px;
+    position: absolute;
+    top: -5px;
+    left: 105%;
+    z-index: 1;
+  } */
 
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+  
